@@ -11,5 +11,5 @@ https://maciejwalkowiak.com/blog/spring-boot-thymeleaf-tailwindcss
 ```bash
 mvn clean package
 
-java --enable-preview -jar -Dspring.profiles.active=dev admin-app/target/admin-app-
+java -jar -Dspring.profiles.active=dev admin-app/target/admin-app-
 ```
